--- a/devjobs-web-app/package.json
+++ b/devjobs-web-app/package.json
@@ -19,8 +19,5 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module",
-  "dependencies": {
-    "mssql": "^8.1.2"
-  }
+  "type": "module"
 }
